Fix z-index when editing cover

--- a/app/styles/constants/z-index.scss
+++ b/app/styles/constants/z-index.scss
@@ -5,3 +5,6 @@ $z-index-page-sticky: 1000;
 
 $z-index-modal-backdrop: 4020;
 $z-index-modal: 4021;
+
+$z-index-profile-cover: 3999;
+$z-index-profile-cover-editing: 4001;
